# otus-rust-lessons

./: Cargo.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: lib.rs
dyn_lib/: Cargo.toml
dyn_lib/src/: lib.rs
example/: Cargo.toml
example/src/: gui.rs  main.rs
network/: Cargo.toml
network/src/: client.rs  lib.rs  mod.rs  server.rs  utils.rs
smart_house/: Cargo.toml
smart_house/src/: devices.rs  http.rs  main.rs  reports.rs
src/: devices.rs  main.rs  reports.rs  utils.rs
udp/: Cargo.toml
udp/src/: main.rs
