[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
network = { path = "../network" }
client = { path = "../client"}
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.11.5"
tokio = { version = "1", features = ["full"] }
iced = {version = "0.12.1", features = ["tokio"]}
iced_futures = "0.12.0"
libloading = "0.8.0"