[package]
name = "smart_house"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
network = {path = "../network"}
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.11.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
